make some desing

--- a/ToDo/MainWindow.xaml
+++ b/ToDo/MainWindow.xaml
@@ -3,6 +3,90 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="34" />
+            <RowDefinition Height="auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition Width="50" />
+        </Grid.ColumnDefinitions>
+        <TextBox Margin="5" />
+        <Button Grid.Column="1" Margin="0,5,5,5" Content="Add" />
+        <ScrollViewer Margin="5" HorizontalScrollBarVisibility="Auto" Grid.Row="1" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Disabled">
+            <ItemsControl Margin="0,0,0,0">
+                <ItemsControl.ItemsPanel><ItemsPanelTemplate><StackPanel Orientation="Horizontal"></StackPanel></ItemsPanelTemplate></ItemsControl.ItemsPanel>
+                <ItemsControl.Items>
+                    <ToggleButton Background="White" BorderBrush="White"  Margin="0,0,0,0">
+                        <TextBlock Foreground="Blue">@tomorow</TextBlock>
+                    </ToggleButton>
+                    <ToggleButton Background="White" BorderBrush="White"  Margin="5,0,0,0">
+                        <TextBlock Foreground="IndianRed" >@work</TextBlock>
+                    </ToggleButton>
+                    <ToggleButton Background="White" BorderBrush="White" Margin="5,0,0,0">
+                        <TextBlock Foreground="Khaki">@here</TextBlock>
+                    </ToggleButton>                   
+                    <ToggleButton Background="White" BorderBrush="White" Margin="5,0,0,0">
+                        <TextBlock Foreground="Khaki">@here</TextBlock>
+                    </ToggleButton>                    
+                    <ToggleButton Background="White" BorderBrush="White" Margin="5,0,0,0">
+                        <TextBlock Foreground="Khaki">@here</TextBlock>
+                    </ToggleButton>                    
+                    <ToggleButton Background="White" BorderBrush="White" Margin="5,0,0,0">
+                        <TextBlock Foreground="Khaki">@here</TextBlock>
+                    </ToggleButton>
+                </ItemsControl.Items>
+            </ItemsControl>
+        </ScrollViewer>
+        <ScrollViewer Grid.Row="2" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+            <ItemsControl>
+                <ItemsControl.Items>
+                    <Border BorderThickness="1" BorderBrush="Black" CornerRadius="0" Height="60" Margin="5,5,5,5">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition Height="29" />
+                            </Grid.RowDefinitions>
+                            <TextBlock>Some task is writen here</TextBlock>
+                            <StackPanel Grid.Row="1" Margin="5" Orientation="Horizontal">
+                                <TextBlock Margin="5,0,0,0">@tomorow</TextBlock>
+                                <TextBlock Margin="5,0,0,0">@work</TextBlock>
+                                <TextBlock Margin="5,0,0,5">@here</TextBlock>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+                    <Border BorderThickness="1" BorderBrush="Black" CornerRadius="0" Height="60" Margin="5,0,5,5">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition Height="29" />
+                            </Grid.RowDefinitions>
+                            <TextBlock Margin="5">Some task is writen here</TextBlock>
+                            <StackPanel Grid.Row="1" Margin="0,5,0,2" Orientation="Horizontal">
+                                <TextBlock Foreground="Blue" Margin="5,0,0,0">@tomorow</TextBlock>
+                                <TextBlock Foreground="IndianRed" Margin="5,0,0,0">@work</TextBlock>
+                                <TextBlock Foreground="Khaki" Margin="5,0,5,0">@here</TextBlock>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+                    <Border BorderThickness="1" BorderBrush="Black" CornerRadius="0" Height="60" Margin="5,0,5,5">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition Height="29" />
+                            </Grid.RowDefinitions>
+                            <TextBlock>Some task is writen here</TextBlock>
+                            <StackPanel Grid.Row="1" Margin="5" Orientation="Horizontal">
+                                <TextBlock Margin="5,0,0,0">@tomorow</TextBlock>
+                                <TextBlock Margin="5,0,0,0">@work</TextBlock>
+                                <TextBlock Margin="5,0,0,5">@here</TextBlock>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+
+                </ItemsControl.Items>
+            </ItemsControl>
+        </ScrollViewer>
     </Grid>
 </Window>
