--- a/ToDo/MainWindow.xaml
+++ b/ToDo/MainWindow.xaml
@@ -1,7 +1,11 @@
 ﻿<Window x:Class="ToDo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ToDo" Height="350" Width="525">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:toDo="clr-namespace:ToDo"
+        mc:Ignorable="d"
+        Title="{Binding ApplicationTitle}" Height="350" Width="525" d:DataContext="{d:DesignInstance toDo:MainWindowViewModel}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="34" />
