--- a/ToDo/MainWindow.xaml
+++ b/ToDo/MainWindow.xaml
@@ -25,7 +25,7 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate DataType="{x:Type toDo:TagViewModel}">
                         <ToggleButton Background="White" BorderBrush="White"  Margin="0,0,0,0">
-                            <TextBlock Foreground="Blue">@tomorow</TextBlock>
+                            <TextBlock Foreground="Blue">#tomorow</TextBlock>
                         </ToggleButton>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
@@ -42,11 +42,14 @@
                                     <RowDefinition Height="29" />
                                 </Grid.RowDefinitions>
                                 <TextBlock Margin="5" Text="{Binding Text}"></TextBlock>
-                                <StackPanel Grid.Row="1" Margin="0,5,0,2" Orientation="Horizontal">
-                                    <TextBlock Foreground="Blue" Margin="5,0,0,0">@tomorow</TextBlock>
-                                    <TextBlock Foreground="IndianRed" Margin="5,0,0,0">@work</TextBlock>
-                                    <TextBlock Foreground="Khaki" Margin="5,0,5,0">@here</TextBlock>
-                                </StackPanel>
+                                <ItemsControl Grid.Row="1" Margin="0,5,0,2" ItemsSource="{Binding Tags}">
+                                    <ItemsControl.ItemsPanel><ItemsPanelTemplate><StackPanel Orientation="Horizontal"></StackPanel></ItemsPanelTemplate></ItemsControl.ItemsPanel>
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate DataType="{x:Type toDo:TagViewModel}">
+                                            <TextBlock Foreground="Blue" Margin="5,0,0,0" Text="{Binding Text, StringFormat={}#{0}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
                             </Grid>
                         </Border>
                     </DataTemplate>
