--- a/ToDo/MainWindow.xaml
+++ b/ToDo/MainWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:toDo="clr-namespace:ToDo"
+        xmlns:viewModel="clr-namespace:ToDo.ViewModel"
         mc:Ignorable="d"
-        Title="{Binding ApplicationTitle}" Height="350" Width="525" d:DataContext="{d:DesignInstance toDo:MainWindowViewModel}">
+        Title="{Binding ApplicationTitle}" Height="350" Width="525" d:DataContext="{d:DesignInstance viewModel:MainWindowViewModel}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="34" />
@@ -23,7 +24,7 @@
             <ItemsControl Margin="0,0,0,0" ItemsSource="{Binding AvalibleTags}">
                 <ItemsControl.ItemsPanel><ItemsPanelTemplate><StackPanel Orientation="Horizontal"></StackPanel></ItemsPanelTemplate></ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
-                    <DataTemplate DataType="{x:Type toDo:TagViewModel}">
+                    <DataTemplate DataType="{x:Type viewModel:TagViewModel}">
                         <ToggleButton Background="White" BorderBrush="White"  Margin="0,0,0,0">
                             <TextBlock Foreground="Blue" Text="{Binding Text, StringFormat={}#{0}}"></TextBlock>
                         </ToggleButton>
@@ -34,7 +35,7 @@
         <ScrollViewer Grid.Row="2" Grid.ColumnSpan="2" Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
             <ItemsControl ItemsSource="{Binding Assigments}">
                 <ItemsControl.ItemTemplate>
-                    <DataTemplate DataType="{x:Type toDo:AssigmentViewModel}">
+                    <DataTemplate DataType="{x:Type viewModel:AssigmentViewModel}">
                         <Border BorderThickness="1" BorderBrush="Black" CornerRadius="0" Height="60" Margin="5,0,5,5">
                             <Grid>
                                 <Grid.RowDefinitions>
@@ -45,7 +46,7 @@
                                 <ItemsControl Grid.Row="1" Margin="0,5,0,2" ItemsSource="{Binding Tags}">
                                     <ItemsControl.ItemsPanel><ItemsPanelTemplate><StackPanel Orientation="Horizontal"></StackPanel></ItemsPanelTemplate></ItemsControl.ItemsPanel>
                                     <ItemsControl.ItemTemplate>
-                                        <DataTemplate DataType="{x:Type toDo:TagViewModel}">
+                                        <DataTemplate DataType="{x:Type viewModel:TagViewModel}">
                                             <TextBlock Foreground="Blue" Margin="5,0,0,0" Text="{Binding Text, StringFormat={}#{0}}"></TextBlock>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
